fix(tests): fix some tests and add enable preview